// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledInput renders correctly 1`] = `
<div
  className="sc-bwzfXH gUrQrN"
/>
`;

exports[`StyledInputs renders correctly 1`] = `
<div
  className="sc-bdVaJa cJDrGx"
/>
`;
